# digital-image-analysis

./: .gitignore  README.md
homework/homework-1/rms-filter/: README.md  output.txt  rmsfilter.py
homework/homework-2/edge-detection/: filter.py  rmsfilter.py
homework/homework-3/: hw3template.m  template.m
homework/homework-3/edge-detection/: README.md  output.txt
homework/homework-3/hough-transform/: README.md  shapeDetectionSubmission.m
homework/homework-4/: .gitignore  CMakeCache.txt  CMakeLists.txt  kittler-illingworth  opencv
homework/homework-4/src/: functions.hpp  main.cpp
homework/homework-5/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  discussion.txt  homework-5
homework/homework-5/include/: functions.hpp
homework/homework-5/src/: functions.cpp  functions.hpp  main.cpp
homework/homework-6/: .gitignore  CMakeLists.txt  homework-6  test.sh
homework/homework-6/image-processing/: CMakeLists.txt
homework/homework-6/image-processing/dilation/: CMakeLists.txt
homework/homework-6/image-processing/dilation/include/: dilation.hpp
homework/homework-6/image-processing/dilation/src/: dilation.cpp
homework/homework-6/image-processing/erosion/: CMakeLists.txt
homework/homework-6/image-processing/erosion/include/: erosion.hpp
homework/homework-6/image-processing/erosion/src/: erosion.cpp
homework/homework-6/main/: CMakeLists.txt
homework/homework-6/main/include/: homework-6.hpp
homework/homework-6/main/src/: homework-6.cpp  main.cpp
homework/homework-6/src/: homework-6.cpp  main.cpp
project/project-proposal/: ieee-template.fdb_latexmk  ieee-template.fls  ieee-template.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  refs.bib
